swagger and password fix
