# models/user.js
@@ -13,11 +13,6 @@ const userSchema = new mongoose.Schema({
         unique: true,
         required: true,
     },
-    password: {
-        type: String,
-        unique: false,
-        required: true,
-    },
     phone: {
         type: String,
         unique: false,
